# helix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUCCESS.md  UEFI_AUDIT_FINAL_REPORT.md  UEFI_AUDIT_REPORT.md  UEFI_ESP_SOLUTION_FINAL.md  libmod.rmeta  rustfmt.toml
core/: Cargo.toml
core/src/: lib.rs  selfheal.rs
core/src/debug/: console.rs  mod.rs
core/src/hotreload/: crasher.rs  mod.rs  schedulers.rs
core/src/interrupts/: exceptions.rs  handlers.rs  mod.rs  router.rs
core/src/ipc/: README.md  channel.rs  event_bus.rs  message_router.rs  mod.rs
core/src/orchestrator/: capability_broker.rs  lifecycle.rs  mod.rs  panic_handler.rs  resource_broker.rs
core/src/syscall/: dispatcher.rs  gateway.rs  mod.rs  registry.rs  validation.rs
fs/: Cargo.toml
fs/src/: lib.rs
fs/src/alloc/: bitmap.rs  buddy.rs  cow.rs  freelist.rs  mod.rs  zone.rs
fs/src/api/: handle.rs  mod.rs  mount.rs  ops.rs  vfs.rs
fs/src/cache/: arc.rs  buffer.rs  inode.rs  mod.rs  page.rs
fs/src/compress/: adaptive.rs  lz4.rs  mod.rs  zstd.rs
fs/src/core/: atomic.rs  error.rs  hash.rs  mod.rs  time.rs  types.rs
fs/src/crypto/: aead.rs  cipher.rs  integrity.rs  key.rs  mod.rs
fs/src/disk/: device.rs  extent.rs  inode.rs  layout.rs  mod.rs  superblock.rs
fs/src/journal/: checkpoint.rs  mod.rs  record.rs  recovery.rs  txn.rs  wal.rs
fs/src/ops/: dir.rs  file.rs  io.rs  link.rs  mod.rs  xattr.rs
fs/src/snapshot/: clone.rs  core.rs  diff.rs  mod.rs  tree.rs
fs/src/tree/: btree.rs  cursor.rs  dir.rs  mod.rs  node.rs  radix.rs
fs/src/vfs/: dentry.rs  inode.rs  mod.rs  namespace.rs  superblock.rs
graphics/: Cargo.toml  README.md
graphics/lumina-3d/: Cargo.toml
graphics/lumina-3d/src/: atmosphere.rs  camera.rs  gi.rs  lib.rs  lighting.rs  pbr.rs  postfx.rs  shadow.rs
graphics/lumina-asset/: Cargo.toml
graphics/lumina-asset/src/: cache.rs  exporter.rs  importer.rs  lib.rs  material.rs  mesh.rs  shader.rs  streaming.rs  texture.rs
graphics/lumina-backend/: Cargo.toml
graphics/lumina-backend/src/: advanced.rs  bindless.rs  buffer.rs  command.rs  descriptor.rs  device.rs  instance.rs  lib.rs  mesh_shaders.rs  pipeline.rs  queue.rs  raytracing.rs  resource.rs  sampler.rs  shader_module.rs  submission.rs  surface.rs  swapchain.rs  texture.rs
graphics/lumina-core/: Cargo.toml
graphics/lumina-core/src/: barrier.rs  bindless.rs  blend.rs  blend_state.rs  buffer.rs  buffer_types.rs  color.rs  compute_pass.rs  debug.rs  descriptor_pool.rs  device_limits.rs  draw_commands.rs  event.rs  format_utils.rs  graphics_pass.rs  handle.rs  image.rs  instance.rs  lib.rs  memory.rs  memory_types.rs  mesh_shader.rs  multisample_state.rs  pipeline.rs  pipeline_cache.rs  profiling.rs  push_constants.rs  query.rs  queue_submit.rs  rasterization.rs  rasterization_state.rs  ray_tracing.rs  render_pass.rs  render_pass_types.rs  surface.rs  sync_primitives.rs  synchronization.rs  transfer.rs  vertex.rs  vertex_input.rs  (+3 more)
graphics/lumina-debug/: Cargo.toml
graphics/lumina-debug/src/: capture.rs  lib.rs  logger.rs  markers.rs  perf_counters.rs  profiling.rs  statistics.rs  validation.rs
graphics/lumina-derive/: Cargo.toml
graphics/lumina-derive/src/: analyze.rs  codegen.rs  error.rs  ir_gen.rs  lib.rs  parse.rs  shader.rs  spirv_gen.rs  types.rs  validate.rs
graphics/lumina-inspector/: Cargo.toml
graphics/lumina-inspector/src/: capture.rs  lib.rs  memory.rs  pipeline.rs  remote.rs  resource.rs  shader_debug.rs  timeline.rs
graphics/lumina-ir/: Cargo.toml
graphics/lumina-ir/src/: analysis.rs  block.rs  builder.rs  cfg.rs  dominator.rs  function.rs  instruction.rs  intrinsics.rs  lib.rs  module.rs  optimizer.rs  passes.rs  ssa.rs  types.rs  validation.rs  value.rs
graphics/lumina-material/: Cargo.toml
graphics/lumina-material/src/: instance.rs  layer.rs  lib.rs  material.rs  parameter.rs  pbr.rs  procedural.rs  sampler.rs  shader_graph.rs  texture.rs
graphics/lumina-math/: Cargo.toml
graphics/lumina-math/src/: lib.rs
graphics/lumina-memory/: Cargo.toml
graphics/lumina-memory/src/: allocator.rs  block.rs  compression.rs  heap.rs  lib.rs  pool.rs  staging.rs  streaming.rs  suballocator.rs  virtual_alloc.rs
graphics/lumina-mesh/: Cargo.toml
graphics/lumina-mesh/src/: blas.rs  cluster.rs  lib.rs  lod.rs  mesh.rs  meshlet.rs  streaming.rs  virtual_geometry.rs
graphics/lumina-pipeline/: Cargo.toml
graphics/lumina-pipeline/src/: bindless.rs  blend.rs  cache.rs  depth.rs  descriptor.rs  layout.rs  lib.rs  pipeline.rs  raster.rs  reflection.rs  shader.rs  specialization.rs  state.rs  vertex.rs
graphics/lumina-render/: Cargo.toml
graphics/lumina-render/src/: barrier.rs  culling.rs  debug.rs  frame.rs  gi.rs  graph.rs  hybrid.rs  lib.rs  neural.rs  pass.rs  resource.rs  scheduler.rs  target.rs  temporal.rs  view.rs  visibility.rs  volumetric.rs
graphics/lumina-scene/: Cargo.toml
graphics/lumina-scene/src/: culling.rs  ecs.rs  graph.rs  instancing.rs  lib.rs  lod.rs  streaming.rs  transform.rs
graphics/lumina-shader/: Cargo.toml
graphics/lumina-shader/src/: lib.rs  shader.rs  shader_compiler.rs  shader_reflection.rs
graphics/lumina-spirv/: Cargo.toml
graphics/lumina-spirv/src/: binary.rs  builder.rs  disasm.rs  instruction.rs  lib.rs  module.rs  opcode.rs  optimizer.rs  reflect.rs  types.rs  validate.rs
graphics/lumina-sync/: Cargo.toml
graphics/lumina-sync/src/: barrier.rs  event.rs  fence.rs  lib.rs  query.rs  semaphore.rs  timeline.rs  wait.rs  workload.rs
graphics/lumina-tools/: Cargo.toml
graphics/lumina-tools/src/: ai_optimizer.rs  cli.rs  cross_gpu.rs  hot_reload.rs  lib.rs  live_metrics.rs  predictive.rs  project.rs  time_travel.rs
graphics/lumina-ui/: Cargo.toml
hal/: Cargo.toml
hal/src/: arch_stubs.rs  cpu.rs  firmware.rs  interrupts.rs  kaslr.rs  lib.rs  mmu.rs  relocation.rs
hal/src/arch/: mod.rs
profiles/minimal/: Cargo.toml  linker_pie.ld
subsystems/cortex/: Cargo.toml  README.md
subsystems/early_boot/: Cargo.toml
subsystems/init/: Cargo.toml
subsystems/memory/: Cargo.toml
(+3229 files in other folders)
