# =============================================================================
# Helix OS Framework Kernel - Workspace Configuration
# =============================================================================
# This is the root workspace manifest for the Helix OS Framework.
# It defines all crates that compose the kernel framework.
# =============================================================================

[workspace]
resolver = "2"

members = [
    # Boot Infrastructure
    "boot/multiboot2",
    "boot/limine",
    "boot/uefi",

    # Hardware Abstraction Layer
    "hal",

    # Kernel Core
    "core",

    # Subsystems
    "subsystems/execution",
    "subsystems/memory",
    "subsystems/dis",
    "subsystems/userspace",
    "subsystems/relocation",
    "subsystems/nexus",

    # NEXUS Sub-crates (modular architecture)
    "subsystems/nexus-types",
    "subsystems/nexus-core",
    "subsystems/nexus-cognitive",
    "subsystems/nexus-evolution",

    # Module System
    "modules",

    # Module Implementations
    "modules_impl/schedulers/round_robin",

    # Benchmarks
    "benchmarks",

    # Filesystem
    "fs",

    # OS Profiles
    "profiles/minimal",
]

# Future members (uncomment when implemented):
# "boot/uefi",
# "hal/arch/x86_64",
# "hal/arch/aarch64",
# "hal/arch/riscv64",
# "hal/firmware/acpi",
# "hal/firmware/devicetree",
# "subsystems/io",
# "subsystems/security",
# "subsystems/communication",
# "subsystems/time",
# "ipc",
# "policy",
# "interface",
# "sdk",
# "profiles/desktop",
# "profiles/server",
# "profiles/embedded",
# "profiles/secure",
# "modules_impl/schedulers/cfs",
# "modules_impl/schedulers/realtime",
# "modules_impl/schedulers/cooperative",
# "modules_impl/allocators/buddy",
# "modules_impl/allocators/slab",
# "modules_impl/allocators/tlsf",
# "modules_impl/filesystems/ramfs",
# "modules_impl/drivers/serial",
# "modules_impl/drivers/keyboard",
# "modules_impl/drivers/virtio",
# "tools/helix-build",
# "tools/helix-pack",
# "tools/helix-test",

[workspace.package]
version = "0.1.0"
authors = ["Helix OS Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"

[workspace.dependencies]
# Internal crates (existing)
helix-hal = { path = "hal" }
helix-core = { path = "core" }
helix-execution = { path = "subsystems/execution" }
helix-memory = { path = "subsystems/memory" }
helix-userspace = { path = "subsystems/userspace" }
helix-modules = { path = "modules" }
helix-benchmarks = { path = "benchmarks" }

# External dependencies (no_std compatible)
spin = "0.9"
bitflags = "2.4"
log = "0.4"
static_assertions = "1.1"
cfg-if = "1.0"
paste = "1.0"

# Additional dependencies for future use
hashbrown = "0.14"
arrayvec = { version = "0.7", default-features = false }
heapless = "0.8"
embedded-io = "0.6"

# =============================================================================
# Build Profiles
# =============================================================================

[profile.dev]
# Development profile: fast compilation, full debug info
panic = "abort"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.release]
# Release profile: maximum optimization
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
strip = "symbols"
rpath = false

[profile.release-with-debug]
# Release with debug symbols for profiling
inherits = "release"
debug = true
strip = "none"

[profile.production]
# Production profile: like release but extra hardened
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = false
lto = "thin"

[profile.test]
# Test profile
inherits = "dev"
opt-level = 1
debug = true

# =============================================================================
# Lints Configuration (Rust 1.74+)
# =============================================================================

[workspace.lints.rust]
# Safety lints
unsafe_op_in_unsafe_fn = "warn"
# missing_docs = "warn"

# Code quality - use priority to avoid conflicts
unused = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }

# Deny dangerous patterns
unsafe_code = "allow"                  # Required for kernel
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# =============================================================================
# Lint Groups
# =============================================================================
# Correctness - always deny
correctness = { level = "deny", priority = -1 }

# Suspicious patterns - warn
suspicious = { level = "warn", priority = -1 }

# Code complexity - warn
complexity = { level = "warn", priority = -1 }

# Performance - warn
perf = { level = "warn", priority = -1 }

# Style - warn
style = { level = "warn", priority = -1 }

# Pedantic - allow (too strict for kernel)
pedantic = { level = "allow", priority = -1 }

# Nursery - allow (experimental)
nursery = { level = "allow", priority = -1 }

# Cargo - allow (workspace handles this)
cargo = { level = "allow", priority = -1 }

# =============================================================================
# Specific Lint Overrides (for CI compatibility)
# =============================================================================

# Documentation
missing_docs_in_private_items = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "warn"
doc_markdown = "allow"

# Naming
module_name_repetitions = "allow"
similar_names = "allow"

# Code structure
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
excessive_nesting = "allow"
cognitive_complexity = "allow"

# Casts (kernel needs precise control)
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"

# Pointer operations (common in kernel)
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
as_ptr_cast_mut = "allow"

# Pattern matching
match_same_arms = "allow"
match_like_matches_macro = "allow"
match_wildcard_for_single_variants = "allow"

# Methods
must_use_candidate = "allow"
return_self_not_must_use = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
unused_self = "allow"

# Const
missing_const_for_fn = "allow"

# Imports
wildcard_imports = "allow"
redundant_pub_crate = "allow"

# Style
uninlined_format_args = "allow"
unreadable_literal = "allow"
use_self = "allow"
redundant_closure_for_method_calls = "allow"
redundant_closure = "allow"
unnecessary_sort_by = "allow"
map_unwrap_or = "allow"
option_if_let_else = "allow"
needless_range_loop = "allow"
assigning_clones = "allow"
useless_vec = "allow"
module_inception = "allow"
unnested_or_patterns = "allow"

# Error handling (kernel specific)
unwrap_used = "warn"
expect_used = "allow"
panic = "allow"
todo = "warn"
unimplemented = "warn"

# Multiple crate versions (workspace handles)
multiple_crate_versions = "allow"

# =============================================================================
# Features (Workspace-wide)
# =============================================================================

[workspace.metadata.helix]
# Custom metadata for build scripts
version = "0.4.0"
codename = "Aurora"
min_rust_version = "1.75.0"
