[package]
name = "helix-fs"
version = "0.1.0"
edition = "2021"
authors = ["Helix OS Team"]
license = "MIT"
description = "HelixFS - Revolutionary Copy-on-Write Filesystem for Helix OS"
repository = "https://github.com/helix-os/helix"
keywords = ["filesystem", "kernel", "no_std", "cow", "embedded"]
categories = ["no-std", "filesystem", "embedded"]
readme.workspace = true

[lib]
name = "helixfs"
path = "src/lib.rs"

[features]
default = ["alloc"]
std = ["alloc"]
alloc = []
kernel = []
compression = ["alloc"]
encryption = ["alloc"]
integrity = []
snapshots = ["alloc"]
full = ["compression", "encryption", "integrity", "snapshots"]

[dependencies]
# No external dependencies - fully self-contained for kernel use

[dev-dependencies]
# For testing in std environment only

# NOTE: Profile configurations moved to workspace root Cargo.toml
# Profiles defined here are ignored when building as part of the workspace
