[workspace]
resolver = "2"
members = [
    # Core crates
    "lumina-core",
    "lumina-math",
    "lumina-shader",
    "lumina-ir",
    "lumina-spirv",
    "lumina-derive",
    # Phase 3: Advanced Rendering
    "lumina-render",
    "lumina-pipeline",
    "lumina-material",
    "lumina-mesh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"
authors = ["Helix OS Team"]

[workspace.dependencies]
# Internal crates
lumina-core = { path = "lumina-core" }
lumina-math = { path = "lumina-math" }
lumina-shader = { path = "lumina-shader" }
lumina-ir = { path = "lumina-ir" }
lumina-spirv = { path = "lumina-spirv" }
lumina-derive = { path = "lumina-derive" }
# Phase 3: Advanced Rendering
lumina-render = { path = "lumina-render" }
lumina-pipeline = { path = "lumina-pipeline" }
lumina-material = { path = "lumina-material" }
lumina-mesh = { path = "lumina-mesh" }

# External dependencies
bitflags = "2.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
