[package]
name = "helix-hal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware Abstraction Layer for Helix OS Framework"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []
x86_64 = []
aarch64 = []
riscv64 = []
debug_reloc = [] # Enable debug logging for relocation engine
debug = []       # General debug features
tlb_stats = []   # TLB statistics tracking
percpu = []      # Per-CPU data structures
