[package]
name = "lumina-backend"
version = "0.1.0"
edition = "2021"
authors = ["Helix Team"]
description = "GPU backend abstraction layer connecting LUMINA to hardware drivers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"
keywords = ["graphics", "rendering", "gpu", "backend", "vulkan"]
categories = ["graphics", "rendering", "game-development"]

[features]
default = ["std"]
std = []
vulkan = []
metal = []
dx12 = []
webgpu = []
validation = []
profiling = []
ray-tracing = []
mesh-shaders = []
bindless = []

[dependencies]
lumina-core = { path = "../lumina-core" }
lumina-math = { path = "../lumina-math" }
bitflags = "2.4"

[dev-dependencies]

[lib]
name = "lumina_backend"
path = "src/lib.rs"
