[package]
name = "lumina-inspector"
version = "0.1.0"
edition = "2024"
authors = ["Helix OS Team"]
description = "Revolutionary GPU frame debugger and inspector for LUMINA"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"
keywords = ["gpu", "graphics", "debugging", "inspector", "profiler"]
categories = ["development-tools::debugging", "graphics", "game-development"]

[features]
default = ["std"]
std = []
remote-debug = []
timeline-visualization = []
shader-disasm = []
memory-profiler = []
full = ["remote-debug", "timeline-visualization", "shader-disasm", "memory-profiler"]

[dependencies]
lumina-core = { path = "../lumina-core" }
lumina-tools = { path = "../lumina-tools" }
