[package]
name = "lumina-memory"
version = "0.1.0"
edition = "2021"
authors = ["Helix OS Contributors"]
description = "LUMINA GPU memory management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"
keywords = ["graphics", "gpu", "memory", "allocator", "vram"]
categories = ["graphics", "no-std", "game-development", "memory-management"]

[features]
default = ["std"]
std = []
validation = []
profiling = []
defragmentation = []
sparse-resources = []
external-memory = []

[dependencies]
lumina-core = { path = "../lumina-core" }
bitflags = "2.4"

[dev-dependencies]
