[package]
name = "lumina-render"
version = "0.1.0"
edition = "2021"
authors = ["Helix OS Team"]
description = "Revolutionary render graph and advanced rendering system for LUMINA"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"
keywords = ["graphics", "rendering", "render-graph", "gpu", "vulkan"]
categories = ["graphics", "rendering", "game-development"]

[dependencies]
lumina-core = { path = "../lumina-core" }
lumina-math = { path = "../lumina-math" }

[dev-dependencies]

[features]
default = ["std"]
std = []
ray-tracing = []
mesh-shading = []
neural-rendering = []
virtual-geometry = []

[lib]
name = "lumina_render"
path = "src/lib.rs"
