[package]
name = "helix-minimal-os"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal OS example built with Helix Framework"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# External dependencies
spin = "0.9"

# Helix framework crates
helix-hal = { workspace = true }
helix-core = { workspace = true }
helix-execution = { workspace = true }
helix-modules = { workspace = true }
helix-benchmarks = { workspace = true }
helix-userspace = { workspace = true }
helix-fs = { path = "../../fs", features = ["alloc"] }
helix-relocation = { path = "../../subsystems/relocation", features = [
    "x86_64",
    "kaslr",
    "validation",
    "stats",
] }

# NEXUS — experimental sandbox (lightweight prediction + healing only)
helix-nexus = { path = "../../subsystems/nexus", default-features = false, features = [
    "experimental-lite",
] }

# Note: helix-scheduler-round-robin is temporarily commented out
# helix-scheduler-round-robin = { path = "../../modules_impl/schedulers/round_robin" }

[features]
default = ["serial_console"]
serial_console = []

# Enable NEXUS lite sandbox in the minimal profile
nexus-lite = []

# NOTE: Profile configurations moved to workspace root Cargo.toml
# Profiles defined here are ignored when building as part of the workspace
