[package]
name = "helix-cortex"
version = "0.1.0"
edition = "2021"
authors = ["Helix OS Contributors"]
description = "CORTEX: Revolutionary Kernel Intelligence Framework - Self-aware, self-healing, self-evolving kernel intelligence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helix-os/helix"
keywords = ["kernel", "ai", "intelligence", "self-healing", "os"]
categories = ["no-std", "embedded", "os"]

[lib]
name = "helix_cortex"
path = "src/lib.rs"

[features]
default = ["consciousness", "neural", "temporal", "survivability", "meta"]

# Core intelligence features
consciousness = []           # Structural consciousness - invariant reasoning
neural = []                  # Neural decision engine
temporal = []                # Temporal kernel - versioning across time
survivability = []           # Post-exploit survivability
meta = []                    # Meta-kernel - kernel that watches kernel
formal = []                  # Formal verification engine
learning = []                # Adaptive learning
policy = []                  # Policy engine
telemetry = []               # Telemetry and metrics

# Architecture features
x86_64 = []
aarch64 = []
riscv64 = []

# Intelligence levels
level_1 = []                 # Basic monitoring
level_2 = ["level_1"]        # Pattern detection
level_3 = ["level_2"]        # Predictive analysis
level_4 = ["level_3"]        # Autonomous correction
level_5 = ["level_4"]        # Full consciousness

# Full feature set
full = ["consciousness", "neural", "temporal", "survivability", "meta", "formal", "learning", "policy", "telemetry"]

# Minimal feature set (resource-constrained)
minimal = ["consciousness", "survivability", "meta"]

# Decision engine modes
deterministic = []           # Pure deterministic decisions
probabilistic = []           # Bounded probabilistic decisions
hybrid = ["deterministic", "probabilistic"]

# Survivability modes
paranoid = []                # Maximum security, performance cost
balanced = []                # Balance security/performance
performance = []             # Minimum overhead

# Debug and testing
debug_cortex = []
trace_decisions = []
simulate_failures = []
benchmark = []

[dependencies]
# No external dependencies - pure Rust kernel code

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
